# ft_3axis_analysis

data_visualization/: visualization.m
kdl_analysis/: 3axis_kdl_analysis.cpp  CMakeLists.txt
model/: shoulder.urdf
results/: 2d_step005.csv  2d_step01.csv  2d_step05.csv  3d_step05.csv  step05.csv
